* upgraded to scons-2.2.0

To documentation:
* Self-doc is complete now for sfawefd2d and 3d

To APIs:
* python API (m8r or rsf.api) is now always installed
* tell and seek added to C++ API
* added support for FFTW and PSP
* shape() and reshape() methods in File class (python API) reversed
  for consistency with numpy

To the Python package:
* added support for gnuplot figures in rsf.tex

To programs:

* sfsemblance: semblance over the specified axis
* sflinear: linear 1-D interpolation
* sfspike now optionally accepts stdin
* iwave package from Bill Symes and The Rice Inversion Project
* user/zone: new contributor (Yanadet Sripanich)
* sfsegyheader creates delrt from o1
* user/poulsonj: new contributor (Jack Poulson)
* vpconvert  checks the existence of different pens and prefers gdpen
  to pngpen
* sffft1, sffft3, sfspectra, sfspectra2: optional support for FFTW
* oglpen stops movie on pressing 'n' or 'm', menu on left button on
  Macs
* creating rsfpwd library in user/fomels to avoid code duplication
* sfawefd2d and 3d: constant-density flag. Improved speed, memory
* sfgraph: depth= option for colored symbols
* sfcat and sfadd no longer have a limit on the number of files
* user/chengjb: new contributor (Jiubing Cheng)

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:
* Fixed settype bug in Python API
* Fixed inpout selfdoc extraction for C++ programs

In the Python package:

* Fixed "scons test" in suproj

In programs:

* Fixed size limitation in sfclip2
* Added x0 and y0 in sfstolt 
* Fixed installing the plplot driver with .driver_info extension

In the build system:
* Fixed failed dependency on gendoc.h when installing pens

===Changes in defaults and interfaces===

* In sflwefd: *q1 and *q2 parameters become *qx and *qz, respectively

==Release 1.3 (2012-04-22)==

===Additions and enhancements===

To the reproducible documents collection:

* jsg/reversible: A reversible transform for seismic data processing